# specs

./: README.md  pyproject.toml  ralph
00-hello-world/: SPEC.md
01-temp-converter/: SPEC.md
docs/: implementation_spec.md  nas_structure.md  nas_structure_simple.md  run_interface.md
src/specs/00-hello-world/: acceptance.sh
src/specs/01-temp-converter/: acceptance.sh
src/specs/02-wordcount/: SPEC.md  acceptance.sh
src/specs/02-wordcount/fixtures/: lorem.txt
src/specs/03-args-parser/: SPEC.md  acceptance.sh
src/specs/04-csv-filter/: SPEC.md  acceptance.sh
src/specs/04-csv-filter/fixtures/: people.csv
src/specs/05-expression-eval/: SPEC.md  acceptance.sh
src/specs/06-todo-manager/: SPEC.md  acceptance.sh
src/specs/06-todo-manager/scaffold/: pyproject.toml
src/specs/06-todo-manager/scaffold/src/todo/: cli.py
src/specs/07-log-analyzer/: SPEC.md  acceptance.sh
src/specs/07-log-analyzer/scaffold/: pyproject.toml
src/specs/07-log-analyzer/scaffold/src/loganalyzer/: cli.py
