[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "specs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[tool.hatch.build.targets.wheel]
packages = ["src/specs"]
sources = ["src"]
[tool.hatch.build.targets.sdist]
include = ["src/specs/py.typed"]
